fix(img): Display it correctly on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -166,6 +166,8 @@ table tr:nth-child(odd) {
 
 p img {
   display: block;
+  max-width: 100%;
+  height: auto;
   margin: 10px auto;
   border: 1px solid var(--color-img-border);
   box-shadow: 0 0 .5em var(--color-img-shadow);
